# ChangeLog for dev-libs/389-adminutil
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/389-adminutil/ChangeLog,v 1.2 2011/01/11 22:27:43 lxnay Exp $

*389-adminutil-1.1.13 (11 Jan 2011)

  11 Jan 2011; Fabio Erculiani <lxnay@gentoo.org>
  +389-adminutil-1.1.13.ebuild:
  version bump

*389-adminutil-1.1.10 (07 Jul 2010)

  07 Jul 2010; Fabio Erculiani <lxnay@gentoo.org>
  +389-adminutil-1.1.10.ebuild, +metadata.xml:
  new ebuild, thanks to Andreis_Vinogradovs ( slepnoga )
  <spamslepnoga@inbox.ru>, closing bug #309557
