@@ -1,6 +1,11 @@
 # ChangeLog for dev-libs/389-adminutil
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/389-adminutil/ChangeLog,v 1.2 2011/01/11 22:27:43 lxnay Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/389-adminutil/ChangeLog,v 1.3 2011/08/14 09:33:36 lxnay Exp $
+
+*389-adminutil-1.1.14 (14 Aug 2011)
+
+  14 Aug 2011; Fabio Erculiani <lxnay@gentoo.org> +389-adminutil-1.1.14.ebuild:
+  version bump
 
 *389-adminutil-1.1.13 (11 Jan 2011)
 
